zag-poc/tests/diag/e0002_noalloc.expected
error[E0002]: capability violation — `@noalloc` constraint broken in function `bad_noalloc`
  --> tests/diag/e0002_noalloc.zag:2:1
   |
2 | fn bad_noalloc(n: i32) void @noalloc {
   | ^^^^^^^^^^^ effect occurs here
   = note: @noalloc functions must not perform heap allocation (zalloc/zfree/new)
   = hint: remove the heap allocation, or remove the @noalloc annotation
