zag-poc/tests/diag/e0002_noalloc.zag
// E0002: @noalloc function must not allocate
fn bad_noalloc(n: i32) void @noalloc {
    let buf: []i32 = zalloc(n);
    zfree(buf);
}

fn main() i32 {
    return 0;
}
